fix line spacing. bring back akarin.

--- a/style.css
+++ b/style.css
@@ -140,3 +140,7 @@ div img {
 span.remove_news {
   cursor: pointer;
 }
+
+p {
+  line-height: 15px;
+}
